<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Tank</string>
    <string name="newBattleBtn">New Battle</string>
    <string name="chooseBattleBtn">Choose Battle</string>
    <string name="exitGameBtn">Exit</string>
    <string name="inputServerIPTextViewString">Please Input Server IP:</string>
    <string name="inputTankNameTextViewString">Please Input Your Tank Name:</string>
    <string name="startBattleButtonString">Start Game</string>
</resources>
