<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@drawable/welcome">

    <Button android:id="@+id/newBattleBtn"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="75dp"
            android:text="@string/newBattleBtn"></Button>
    <Button android:id="@+id/chooseBattleBtn"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="35dp"
            android:text="@string/chooseBattleBtn"></Button>
    <Button android:id="@+id/exitGameBtn"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_width="120dp"
            android:layout_height="35dp"
            android:layout_marginRight="10dp"
            android:text="@string/exitGameBtn"></Button>
</RelativeLayout>